# MonsterStatsAnalysis

./: .gitignore  Cargo.toml
src/: main.rs  monster_data.rs
src/monster_data/: monster.rs
